@@ -30,7 +30,13 @@ Space characters have no meaning in programs.
 
 =head2 Symbol Name
 
-A symbol name is the characters that are composed of L<word characters|/"Word Characters"> and C<::>, and don't contains C<__>, and don't start with a number C<0-9>.
+A symbol name is the characters that are composed of L<word characters|/"Word Characters"> and C<::>.
+
+A symbol name can't contains C<__>, and can't start with a number C<0-9>.
+
+A symbol name can't start with C<::>, and can't end with C<::>.
+
+A symbol name can't contains C<:::>.
 
   # Symbol names
   foo
