@@ -1,7 +1,8 @@
 Revision history for SPVM
 0.9515_1  2022-05-09
-        [BUG FIX]
-        * Fix the bug that "::" is allowed in the left operand of the fatto comma "=>".
+        [CHANGE]
+        * Improve symbol name checking.
+        
         [NON BACKWORD COMPATIBLE CHANGES]
         * Remove "any_object_basic_type_id" native API. ID 155 is reused by "free_env_prepared" native API.
         * Remove "string_basic_type_id" native API. ID 162 is reused by "cleanup_global_vars" native API.
